[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
rsa = { version = "0.9.9", features = ["pem"] }
base64 = "0.22"
hex = "0.4"
md5 = "0.8"
anyhow = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.33.3"
egui = "0.33.3"
tokio = { version = "1.41", features = ["rt", "sync", "time", "net"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql"] }
winit = "0.30"
egui-async = "0.2.6"
